// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Query Parameter Parsing and Formatting Identifier type parameters parses Identifier parameter as database with table param 1`] = `
[
  {
    "from": {
      "database": "{db:Identifier}",
      "kind": "tableRef",
      "table": "{tbl:Identifier}",
    },
    "kind": "select",
    "limit": {
      "count": {
        "kind": "literal",
        "type": "UInt64",
        "value": "1",
      },
    },
    "select": [
      {
        "kind": "asterisk",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting Identifier type parameters parses Identifier parameter for database and table 1`] = `
[
  {
    "from": {
      "database": "{db:Identifier}",
      "kind": "tableRef",
      "table": "{tbl:Identifier}",
    },
    "kind": "select",
    "select": [
      {
        "kind": "literal",
        "type": "UInt64",
        "value": "1",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting Identifier type parameters parses Identifier parameter in table reference 1`] = `
[
  {
    "from": {
      "kind": "tableRef",
      "table": "{tbl:Identifier}",
    },
    "kind": "select",
    "select": [
      {
        "kind": "literal",
        "type": "UInt64",
        "value": "1",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting Identifier type parameters parses Identifier parameter with regular table 1`] = `
[
  {
    "from": {
      "database": "{db:Identifier}",
      "kind": "tableRef",
      "table": "my_table",
    },
    "kind": "select",
    "select": [
      {
        "kind": "literal",
        "type": "UInt64",
        "value": "1",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting basic parameter types parses Decimal types 1`] = `
[
  {
    "kind": "select",
    "select": [
      {
        "kind": "queryParam",
        "name": "a",
        "type": "Decimal(10, 2)",
      },
      {
        "kind": "queryParam",
        "name": "b",
        "type": "Decimal128(4)",
      },
      {
        "kind": "queryParam",
        "name": "c",
        "type": "Decimal256(8)",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting basic parameter types parses FixedString type 1`] = `
[
  {
    "kind": "select",
    "select": [
      {
        "kind": "queryParam",
        "name": "fs",
        "type": "FixedString(16)",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting basic parameter types parses Float types 1`] = `
[
  {
    "kind": "select",
    "select": [
      {
        "kind": "queryParam",
        "name": "a",
        "type": "Float32",
      },
      {
        "kind": "queryParam",
        "name": "b",
        "type": "Float64",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting basic parameter types parses Int types 1`] = `
[
  {
    "kind": "select",
    "select": [
      {
        "kind": "queryParam",
        "name": "a",
        "type": "Int8",
      },
      {
        "kind": "queryParam",
        "name": "b",
        "type": "Int16",
      },
      {
        "kind": "queryParam",
        "name": "c",
        "type": "Int32",
      },
      {
        "kind": "queryParam",
        "name": "d",
        "type": "Int64",
      },
      {
        "kind": "queryParam",
        "name": "e",
        "type": "Int128",
      },
      {
        "kind": "queryParam",
        "name": "f",
        "type": "Int256",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting basic parameter types parses UInt types 1`] = `
[
  {
    "kind": "select",
    "select": [
      {
        "kind": "queryParam",
        "name": "a",
        "type": "UInt8",
      },
      {
        "kind": "queryParam",
        "name": "b",
        "type": "UInt16",
      },
      {
        "kind": "queryParam",
        "name": "c",
        "type": "UInt32",
      },
      {
        "kind": "queryParam",
        "name": "d",
        "type": "UInt64",
      },
      {
        "kind": "queryParam",
        "name": "e",
        "type": "UInt128",
      },
      {
        "kind": "queryParam",
        "name": "f",
        "type": "UInt256",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting basic parameter types parses boolean and UUID types 1`] = `
[
  {
    "kind": "select",
    "select": [
      {
        "kind": "queryParam",
        "name": "b",
        "type": "Bool",
      },
      {
        "kind": "queryParam",
        "name": "u",
        "type": "UUID",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting basic parameter types parses date/time types 1`] = `
[
  {
    "kind": "select",
    "select": [
      {
        "kind": "queryParam",
        "name": "d",
        "type": "Date",
      },
      {
        "kind": "queryParam",
        "name": "dt",
        "type": "DateTime",
      },
      {
        "kind": "queryParam",
        "name": "dt64",
        "type": "DateTime64",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting basic parameter types parses simple scalar types 1`] = `
[
  {
    "kind": "select",
    "select": [
      {
        "kind": "queryParam",
        "name": "x",
        "type": "UInt64",
      },
      {
        "kind": "queryParam",
        "name": "y",
        "type": "String",
      },
      {
        "kind": "queryParam",
        "name": "z",
        "type": "Float64",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting complex parameter types parses Array type 1`] = `
[
  {
    "kind": "select",
    "select": [
      {
        "kind": "queryParam",
        "name": "arr",
        "type": "Array(UInt64)",
      },
      {
        "kind": "queryParam",
        "name": "sarr",
        "type": "Array(String)",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting complex parameter types parses Enum type 1`] = `
[
  {
    "kind": "select",
    "select": [
      {
        "kind": "queryParam",
        "name": "e",
        "type": "Enum8('a' = 1, 'b' = 2)",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting complex parameter types parses LowCardinality Nullable type 1`] = `
[
  {
    "kind": "select",
    "select": [
      {
        "kind": "queryParam",
        "name": "lc",
        "type": "LowCardinality(Nullable(String))",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting complex parameter types parses LowCardinality type 1`] = `
[
  {
    "kind": "select",
    "select": [
      {
        "kind": "queryParam",
        "name": "lc",
        "type": "LowCardinality(String)",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting complex parameter types parses Map type 1`] = `
[
  {
    "kind": "select",
    "select": [
      {
        "kind": "queryParam",
        "name": "m",
        "type": "Map(String, UInt64)",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting complex parameter types parses Nullable Array type 1`] = `
[
  {
    "kind": "select",
    "select": [
      {
        "kind": "queryParam",
        "name": "x",
        "type": "Array(Nullable(String))",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting complex parameter types parses Nullable type 1`] = `
[
  {
    "kind": "select",
    "select": [
      {
        "kind": "queryParam",
        "name": "x",
        "type": "Nullable(UInt64)",
      },
      {
        "kind": "queryParam",
        "name": "y",
        "type": "Nullable(String)",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting complex parameter types parses Tuple type 1`] = `
[
  {
    "kind": "select",
    "select": [
      {
        "kind": "queryParam",
        "name": "t",
        "type": "Tuple(UInt64, String, Float32)",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting complex parameter types parses complex Map type 1`] = `
[
  {
    "kind": "select",
    "select": [
      {
        "kind": "queryParam",
        "name": "m",
        "type": "Map(UUID, Array(Float32))",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting complex parameter types parses named Tuple type 1`] = `
[
  {
    "kind": "select",
    "select": [
      {
        "kind": "queryParam",
        "name": "t",
        "type": "Tuple(a UInt64, b String)",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting complex parameter types parses nested Array type 1`] = `
[
  {
    "kind": "select",
    "select": [
      {
        "kind": "queryParam",
        "name": "nested",
        "type": "Array(Array(UInt32))",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting parameter formatting normalizes whitespace around colon 1`] = `
[
  {
    "kind": "select",
    "select": [
      {
        "kind": "queryParam",
        "name": "x",
        "type": "UInt64",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting parameter formatting preserves complex type string in formatting 1`] = `
[
  {
    "kind": "select",
    "select": [
      {
        "kind": "queryParam",
        "name": "m",
        "type": "Map(UUID, Array(Float32))",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting parameter formatting preserves positional parameter names 1`] = `
[
  {
    "kind": "select",
    "select": [
      {
        "kind": "queryParam",
        "name": "$0",
        "type": "UInt64",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting parameters in CTE (WITH clause) uses parameter in CTE expression 1`] = `
[
  {
    "kind": "select",
    "select": [
      {
        "kind": "columnRef",
        "parts": [
          "val",
        ],
      },
    ],
    "with": [
      {
        "expr": {
          "kind": "queryParam",
          "name": "x",
          "type": "UInt64",
        },
        "kind": "cteExpr",
        "name": "val",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting parameters in FROM clause uses Identifier parameter as database.table 1`] = `
[
  {
    "from": {
      "database": "{db:Identifier}",
      "kind": "tableRef",
      "table": "{tbl:Identifier}",
    },
    "kind": "select",
    "select": [
      {
        "kind": "asterisk",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting parameters in FROM clause uses Identifier parameter as table name 1`] = `
[
  {
    "from": {
      "kind": "tableRef",
      "table": "{tbl:Identifier}",
    },
    "kind": "select",
    "select": [
      {
        "kind": "asterisk",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting parameters in GROUP BY clause uses parameter in GROUP BY 1`] = `
[
  {
    "from": {
      "kind": "tableRef",
      "table": "t",
    },
    "groupBy": {
      "items": [
        {
          "kind": "queryParam",
          "name": "x",
          "type": "UInt64",
        },
      ],
      "kind": "expressions",
    },
    "kind": "select",
    "select": [
      {
        "kind": "queryParam",
        "name": "x",
        "type": "UInt64",
      },
      {
        "args": [],
        "kind": "functionCall",
        "name": "count",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting parameters in HAVING clause uses parameter in HAVING 1`] = `
[
  {
    "from": {
      "kind": "tableRef",
      "table": "t",
    },
    "groupBy": {
      "items": [
        {
          "kind": "columnRef",
          "parts": [
            "x",
          ],
        },
      ],
      "kind": "expressions",
    },
    "having": {
      "kind": "binaryExpr",
      "left": {
        "kind": "columnRef",
        "parts": [
          "cnt",
        ],
      },
      "op": ">",
      "right": {
        "kind": "queryParam",
        "name": "min_count",
        "type": "UInt64",
      },
    },
    "kind": "select",
    "select": [
      {
        "kind": "columnRef",
        "parts": [
          "x",
        ],
      },
      {
        "alias": "cnt",
        "expr": {
          "args": [],
          "kind": "functionCall",
          "name": "count",
        },
        "kind": "alias",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting parameters in JOIN clause uses parameter in JOIN ON condition 1`] = `
[
  {
    "from": {
      "constraint": {
        "expr": {
          "kind": "naryExpr",
          "op": "AND",
          "operands": [
            {
              "kind": "binaryExpr",
              "left": {
                "kind": "columnRef",
                "parts": [
                  "t1",
                  "id",
                ],
              },
              "op": "=",
              "right": {
                "kind": "columnRef",
                "parts": [
                  "t2",
                  "id",
                ],
              },
            },
            {
              "kind": "binaryExpr",
              "left": {
                "kind": "columnRef",
                "parts": [
                  "t2",
                  "val",
                ],
              },
              "op": ">",
              "right": {
                "kind": "queryParam",
                "name": "min_val",
                "type": "UInt64",
              },
            },
          ],
        },
        "kind": "on",
      },
      "joinType": "INNER",
      "kind": "joinExpr",
      "left": {
        "kind": "tableRef",
        "table": "t1",
      },
      "right": {
        "kind": "tableRef",
        "table": "t2",
      },
    },
    "kind": "select",
    "select": [
      {
        "kind": "asterisk",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting parameters in LIMIT/OFFSET clause uses parameter in LIMIT 1`] = `
[
  {
    "from": {
      "kind": "tableRef",
      "table": "t",
    },
    "kind": "select",
    "limit": {
      "count": {
        "kind": "queryParam",
        "name": "n",
        "type": "UInt64",
      },
    },
    "select": [
      {
        "kind": "asterisk",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting parameters in LIMIT/OFFSET clause uses parameter in OFFSET 1`] = `
[
  {
    "from": {
      "kind": "tableRef",
      "table": "t",
    },
    "kind": "select",
    "limit": {
      "count": {
        "kind": "literal",
        "type": "UInt64",
        "value": "10",
      },
    },
    "offset": {
      "kind": "queryParam",
      "name": "off",
      "type": "UInt64",
    },
    "select": [
      {
        "kind": "asterisk",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting parameters in LIMIT/OFFSET clause uses parameter in both LIMIT and OFFSET 1`] = `
[
  {
    "from": {
      "kind": "tableRef",
      "table": "t",
    },
    "kind": "select",
    "limit": {
      "count": {
        "kind": "queryParam",
        "name": "n",
        "type": "UInt64",
      },
    },
    "offset": {
      "kind": "queryParam",
      "name": "off",
      "type": "UInt64",
    },
    "select": [
      {
        "kind": "asterisk",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting parameters in ORDER BY clause uses parameter in ORDER BY expression 1`] = `
[
  {
    "from": {
      "kind": "tableRef",
      "table": "t",
    },
    "kind": "select",
    "orderBy": [
      {
        "direction": "ASC",
        "expr": {
          "kind": "queryParam",
          "name": "col",
          "type": "UInt64",
        },
        "kind": "orderByItem",
      },
    ],
    "select": [
      {
        "kind": "asterisk",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting parameters in PREWHERE clause uses parameter in PREWHERE 1`] = `
[
  {
    "from": {
      "kind": "tableRef",
      "table": "t",
    },
    "kind": "select",
    "prewhere": {
      "kind": "binaryExpr",
      "left": {
        "kind": "columnRef",
        "parts": [
          "x",
        ],
      },
      "op": ">",
      "right": {
        "kind": "queryParam",
        "name": "threshold",
        "type": "UInt64",
      },
    },
    "select": [
      {
        "kind": "asterisk",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting parameters in SELECT clause uses parameter as selected expression 1`] = `
[
  {
    "kind": "select",
    "select": [
      {
        "kind": "queryParam",
        "name": "x",
        "type": "UInt64",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting parameters in SELECT clause uses parameter in CAST expression 1`] = `
[
  {
    "kind": "select",
    "select": [
      {
        "expr": {
          "kind": "queryParam",
          "name": "x",
          "type": "String",
        },
        "kind": "castExpr",
        "type": "UInt64",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting parameters in SELECT clause uses parameter in arithmetic expression 1`] = `
[
  {
    "kind": "select",
    "select": [
      {
        "kind": "binaryExpr",
        "left": {
          "kind": "queryParam",
          "name": "x",
          "type": "UInt64",
        },
        "op": "+",
        "right": {
          "kind": "queryParam",
          "name": "y",
          "type": "UInt64",
        },
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting parameters in SELECT clause uses parameter in function call 1`] = `
[
  {
    "kind": "select",
    "select": [
      {
        "args": [
          {
            "kind": "queryParam",
            "name": "d",
            "type": "String",
          },
        ],
        "kind": "functionCall",
        "name": "toDate",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting parameters in SELECT clause uses parameter with :: cast operator 1`] = `
[
  {
    "kind": "select",
    "select": [
      {
        "expr": {
          "kind": "queryParam",
          "name": "x",
          "type": "String",
        },
        "kind": "castExpr",
        "operator": true,
        "type": "UInt64",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting parameters in SELECT clause uses parameter with alias 1`] = `
[
  {
    "kind": "select",
    "select": [
      {
        "alias": "val",
        "expr": {
          "kind": "queryParam",
          "name": "x",
          "type": "UInt64",
        },
        "kind": "alias",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting parameters in SELECT clause uses parameter with multiple expressions 1`] = `
[
  {
    "kind": "select",
    "select": [
      {
        "kind": "queryParam",
        "name": "a",
        "type": "UInt64",
      },
      {
        "kind": "queryParam",
        "name": "b",
        "type": "String",
      },
      {
        "kind": "queryParam",
        "name": "c",
        "type": "Float64",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting parameters in SETTINGS clause uses parameter in SETTINGS value 1`] = `
[
  {
    "from": {
      "kind": "tableRef",
      "table": "t",
    },
    "kind": "select",
    "select": [
      {
        "kind": "asterisk",
      },
    ],
    "settings": [
      {
        "name": "max_threads",
        "value": {
          "kind": "queryParam",
          "name": "threads",
          "type": "UInt64",
        },
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting parameters in UNION queries uses parameter in UNION ALL members 1`] = `
[
  {
    "kind": "union",
    "queries": [
      {
        "kind": "select",
        "select": [
          {
            "kind": "queryParam",
            "name": "a",
            "type": "UInt64",
          },
        ],
      },
      {
        "kind": "select",
        "select": [
          {
            "kind": "queryParam",
            "name": "b",
            "type": "UInt64",
          },
        ],
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting parameters in WHERE clause uses parameter in IN expression 1`] = `
[
  {
    "from": {
      "kind": "tableRef",
      "table": "t",
    },
    "kind": "select",
    "select": [
      {
        "kind": "asterisk",
      },
    ],
    "where": {
      "expr": {
        "kind": "columnRef",
        "parts": [
          "x",
        ],
      },
      "kind": "inExpr",
      "negated": false,
      "values": [
        {
          "kind": "queryParam",
          "name": "val",
          "type": "UInt64",
        },
      ],
    },
  },
]
`;

exports[`Query Parameter Parsing and Formatting parameters in WHERE clause uses parameter in LIKE expression 1`] = `
[
  {
    "from": {
      "kind": "tableRef",
      "table": "t",
    },
    "kind": "select",
    "select": [
      {
        "kind": "asterisk",
      },
    ],
    "where": {
      "args": [
        {
          "kind": "columnRef",
          "parts": [
            "name",
          ],
        },
        {
          "kind": "queryParam",
          "name": "pattern",
          "type": "String",
        },
      ],
      "kind": "functionCall",
      "name": "like",
    },
  },
]
`;

exports[`Query Parameter Parsing and Formatting parameters in WHERE clause uses parameter in complex boolean expression 1`] = `
[
  {
    "from": {
      "kind": "tableRef",
      "table": "t",
    },
    "kind": "select",
    "select": [
      {
        "kind": "asterisk",
      },
    ],
    "where": {
      "kind": "naryExpr",
      "op": "OR",
      "operands": [
        {
          "kind": "naryExpr",
          "op": "AND",
          "operands": [
            {
              "kind": "binaryExpr",
              "left": {
                "kind": "queryParam",
                "name": "a",
                "type": "UInt64",
              },
              "op": ">",
              "right": {
                "kind": "literal",
                "type": "UInt64",
                "value": "0",
              },
            },
            {
              "kind": "binaryExpr",
              "left": {
                "kind": "queryParam",
                "name": "b",
                "type": "String",
              },
              "op": "!=",
              "right": {
                "kind": "literal",
                "type": "String",
                "value": "",
              },
            },
          ],
        },
        {
          "kind": "queryParam",
          "name": "c",
          "type": "Bool",
        },
      ],
    },
  },
]
`;

exports[`Query Parameter Parsing and Formatting parameters in WHERE clause uses parameter in equality comparison 1`] = `
[
  {
    "from": {
      "kind": "tableRef",
      "table": "t",
    },
    "kind": "select",
    "select": [
      {
        "kind": "asterisk",
      },
    ],
    "where": {
      "kind": "binaryExpr",
      "left": {
        "kind": "columnRef",
        "parts": [
          "x",
        ],
      },
      "op": "=",
      "right": {
        "kind": "queryParam",
        "name": "val",
        "type": "UInt64",
      },
    },
  },
]
`;

exports[`Query Parameter Parsing and Formatting parameters in WHERE clause uses parameter in inequality comparison 1`] = `
[
  {
    "from": {
      "kind": "tableRef",
      "table": "t",
    },
    "kind": "select",
    "select": [
      {
        "kind": "asterisk",
      },
    ],
    "where": {
      "kind": "binaryExpr",
      "left": {
        "kind": "columnRef",
        "parts": [
          "x",
        ],
      },
      "op": "!=",
      "right": {
        "kind": "queryParam",
        "name": "val",
        "type": "String",
      },
    },
  },
]
`;

exports[`Query Parameter Parsing and Formatting parameters in WHERE clause uses parameter in range comparison 1`] = `
[
  {
    "from": {
      "kind": "tableRef",
      "table": "t",
    },
    "kind": "select",
    "select": [
      {
        "kind": "asterisk",
      },
    ],
    "where": {
      "kind": "naryExpr",
      "op": "AND",
      "operands": [
        {
          "kind": "binaryExpr",
          "left": {
            "kind": "columnRef",
            "parts": [
              "x",
            ],
          },
          "op": ">",
          "right": {
            "kind": "queryParam",
            "name": "lo",
            "type": "UInt64",
          },
        },
        {
          "kind": "binaryExpr",
          "left": {
            "kind": "columnRef",
            "parts": [
              "x",
            ],
          },
          "op": "<",
          "right": {
            "kind": "queryParam",
            "name": "hi",
            "type": "UInt64",
          },
        },
      ],
    },
  },
]
`;

exports[`Query Parameter Parsing and Formatting parameters in WHERE clause uses parameter on both sides of comparison 1`] = `
[
  {
    "from": {
      "kind": "tableRef",
      "table": "t",
    },
    "kind": "select",
    "select": [
      {
        "kind": "asterisk",
      },
    ],
    "where": {
      "kind": "binaryExpr",
      "left": {
        "kind": "queryParam",
        "name": "a",
        "type": "UInt64",
      },
      "op": "=",
      "right": {
        "kind": "queryParam",
        "name": "b",
        "type": "UInt64",
      },
    },
  },
]
`;

exports[`Query Parameter Parsing and Formatting parameters in WHERE clause uses parameter with BETWEEN 1`] = `
[
  {
    "from": {
      "kind": "tableRef",
      "table": "t",
    },
    "kind": "select",
    "select": [
      {
        "kind": "asterisk",
      },
    ],
    "where": {
      "args": [
        {
          "args": [
            {
              "kind": "columnRef",
              "parts": [
                "x",
              ],
            },
            {
              "kind": "queryParam",
              "name": "lo",
              "type": "UInt64",
            },
          ],
          "kind": "functionCall",
          "name": "greaterOrEquals",
        },
        {
          "args": [
            {
              "kind": "columnRef",
              "parts": [
                "x",
              ],
            },
            {
              "kind": "queryParam",
              "name": "hi",
              "type": "UInt64",
            },
          ],
          "kind": "functionCall",
          "name": "lessOrEquals",
        },
      ],
      "kind": "functionCall",
      "name": "and",
    },
  },
]
`;

exports[`Query Parameter Parsing and Formatting parameters in WHERE clause uses parameter with IS NULL check 1`] = `
[
  {
    "from": {
      "kind": "tableRef",
      "table": "t",
    },
    "kind": "select",
    "select": [
      {
        "kind": "asterisk",
      },
    ],
    "where": {
      "args": [
        {
          "kind": "queryParam",
          "name": "x",
          "type": "Nullable(UInt64)",
        },
      ],
      "kind": "functionCall",
      "name": "isNull",
    },
  },
]
`;

exports[`Query Parameter Parsing and Formatting parameters in expressions with operators uses parameter as function argument with multiple args 1`] = `
[
  {
    "kind": "select",
    "select": [
      {
        "args": [
          {
            "kind": "queryParam",
            "name": "cond",
            "type": "Bool",
          },
          {
            "kind": "queryParam",
            "name": "a",
            "type": "UInt64",
          },
          {
            "kind": "queryParam",
            "name": "b",
            "type": "UInt64",
          },
        ],
        "kind": "functionCall",
        "name": "if",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting parameters in expressions with operators uses parameter in CASE expression 1`] = `
[
  {
    "from": {
      "kind": "tableRef",
      "table": "t",
    },
    "kind": "select",
    "select": [
      {
        "args": [
          {
            "kind": "binaryExpr",
            "left": {
              "kind": "columnRef",
              "parts": [
                "x",
              ],
            },
            "op": ">",
            "right": {
              "kind": "queryParam",
              "name": "threshold",
              "type": "UInt64",
            },
          },
          {
            "kind": "literal",
            "type": "String",
            "value": "high",
          },
          {
            "kind": "literal",
            "type": "String",
            "value": "low",
          },
        ],
        "kind": "functionCall",
        "name": "multiIf",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting parameters in expressions with operators uses parameter in array subscript 1`] = `
[
  {
    "from": {
      "kind": "tableRef",
      "table": "t",
    },
    "kind": "select",
    "select": [
      {
        "args": [
          {
            "kind": "columnRef",
            "parts": [
              "arr",
            ],
          },
          {
            "kind": "queryParam",
            "name": "idx",
            "type": "UInt64",
          },
        ],
        "kind": "functionCall",
        "name": "arrayElement",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting parameters in expressions with operators uses parameter with concatenation operator 1`] = `
[
  {
    "kind": "select",
    "select": [
      {
        "args": [
          {
            "kind": "queryParam",
            "name": "prefix",
            "type": "String",
          },
          {
            "kind": "literal",
            "type": "String",
            "value": "_suffix",
          },
        ],
        "kind": "functionCall",
        "name": "concat",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting parameters in expressions with operators uses parameter with negation 1`] = `
[
  {
    "kind": "select",
    "select": [
      {
        "args": [
          {
            "kind": "queryParam",
            "name": "x",
            "type": "UInt64",
          },
        ],
        "kind": "functionCall",
        "name": "negate",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting parameters in subqueries uses parameter in IN subquery 1`] = `
[
  {
    "from": {
      "kind": "tableRef",
      "table": "t",
    },
    "kind": "select",
    "select": [
      {
        "kind": "asterisk",
      },
    ],
    "where": {
      "expr": {
        "kind": "columnRef",
        "parts": [
          "x",
        ],
      },
      "kind": "inExpr",
      "negated": false,
      "values": {
        "kind": "subqueryExpr",
        "query": {
          "from": {
            "kind": "tableRef",
            "table": "t2",
          },
          "kind": "select",
          "select": [
            {
              "kind": "columnRef",
              "parts": [
                "id",
              ],
            },
          ],
          "where": {
            "kind": "binaryExpr",
            "left": {
              "kind": "columnRef",
              "parts": [
                "y",
              ],
            },
            "op": ">",
            "right": {
              "kind": "queryParam",
              "name": "threshold",
              "type": "UInt64",
            },
          },
        },
      },
    },
  },
]
`;

exports[`Query Parameter Parsing and Formatting parameters in subqueries uses parameter in subquery WHERE 1`] = `
[
  {
    "from": {
      "kind": "subqueryFrom",
      "query": {
        "from": {
          "kind": "tableRef",
          "table": "t",
        },
        "kind": "select",
        "select": [
          {
            "kind": "asterisk",
          },
        ],
        "where": {
          "kind": "binaryExpr",
          "left": {
            "kind": "columnRef",
            "parts": [
              "x",
            ],
          },
          "op": "=",
          "right": {
            "kind": "queryParam",
            "name": "val",
            "type": "UInt64",
          },
        },
      },
    },
    "kind": "select",
    "select": [
      {
        "kind": "asterisk",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting positional parameters ($N syntax) mixes positional and named parameters 1`] = `
[
  {
    "kind": "select",
    "select": [
      {
        "kind": "queryParam",
        "name": "$0",
        "type": "UInt64",
      },
      {
        "kind": "queryParam",
        "name": "name",
        "type": "String",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting positional parameters ($N syntax) parses $0 positional parameter 1`] = `
[
  {
    "kind": "select",
    "select": [
      {
        "kind": "queryParam",
        "name": "$0",
        "type": "UInt64",
      },
    ],
  },
]
`;

exports[`Query Parameter Parsing and Formatting positional parameters ($N syntax) parses multiple positional parameters 1`] = `
[
  {
    "kind": "select",
    "select": [
      {
        "kind": "queryParam",
        "name": "$0",
        "type": "UInt64",
      },
      {
        "kind": "queryParam",
        "name": "$1",
        "type": "String",
      },
      {
        "kind": "queryParam",
        "name": "$2",
        "type": "Float64",
      },
    ],
  },
]
`;
